--- a/views/output.ejs
+++ b/views/output.ejs
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div>
-        <img src="../<%= date %>" alt="">
+        <img src="<%= qrPath %>" alt="QR Code">
+        <a href="/">Generate another QR Code</a>
     </div>
 </body>
 </html>
